# aws-cloudsaga

./: .gitignore  CHANGELOG.md  NOTICE  README.md  THIRD-PARTY  cloudsaga.py  pyproject.toml
.github/workflows/: publish.yml
awslabs/aws-cloudsaga/: README.md
awslabs/aws-cloudsaga/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
awslabs/aws-cloudsaga/ghrs-data/snapshots/: 2022-07-05_194049_top_paths_snapshot.csv  2022-07-05_194049_views_clones_series_fragment.csv  2022-07-05_230319_top_referrers_snapshot.csv  2022-07-05_230319_views_clones_series_fragment.csv  2022-07-06_230331_top_paths_snapshot.csv  2022-07-06_230331_top_referrers_snapshot.csv  2022-07-06_230331_views_clones_series_fragment.csv  2022-07-07_230331_top_paths_snapshot.csv  2022-07-07_230331_top_referrers_snapshot.csv  2022-07-07_230331_views_clones_series_fragment.csv  2022-07-08_230322_top_paths_snapshot.csv  2022-07-08_230322_top_referrers_snapshot.csv  2022-07-08_230322_views_clones_series_fragment.csv  2022-07-09_230303_top_paths_snapshot.csv  2022-07-09_230303_top_referrers_snapshot.csv  2022-07-09_230303_views_clones_series_fragment.csv  2022-07-10_230305_top_paths_snapshot.csv  2022-07-10_230305_top_referrers_snapshot.csv  (+2800 more)
awslabs/aws-cloudsaga/latest-report/: report.html  report.md  report_for_pdf.html
cloudsaga/: cloudsaga.py
cloudsaga/scenarios/: iam_credentials.py  imds_reveal.py  public_resources.py
scenarios/: iam_credentials.py  imds_reveal.py  mining_bitcoin.py  network_changes.py  public_resources.py
screenshots/: empty_file.rtf
