[tool.poetry]
name = "cloudsaga"
version = "1.0.0"
description = "AWS CloudSaga is a tool to test security controls and alerts within their Amazon Web Services (AWS) environment"
readme = "README.md"
repository = "https://github.com/awslabs/aws-cloudsaga"

authors = ["Joshua McKiddy"]
include = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "NOTICE",
    "README.md",
    "THIRD-PARTY",
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.21.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cloudsaga = "cloudsaga.cloudsaga:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"